# diafilm2

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: pytest.yml
backend/: README.md  manage.py  pytest.ini  setup.cfg
backend/about/: forms.py  views.py
backend/app/: settings.py  urls.py
backend/apps/about/: tests.py  urls.py  views.py
backend/apps/api/: serializers.py  urls.py  views.py
backend/apps/diafilms/: admin.py  apps.py  models.py
backend/apps/posts/: admin.py  forms.py  models.py  sitemaps.py  urls.py  views.py
backend/apps/user/: urls.py
backend/core/: tests.py
backend/diafilm/: dev.env  settings.py  urls.py  wsgi.py
backend/diafilms/: admin.py  apps.py  models.py  urls.py  views.py
backend/diafilms/management/: README.md
backend/diafilms/migrations/: 0001_initial.py  0002_auto_20210907_1438.py  0003_auto_20210908_0735.py
backend/diafilms/templates/: about.html  contact.html  index.html  post.html
backend/parsing/: django_for_jupyter.py
backend/parsing/.ipynb_checkpoints/: scrape-checkpoint.ipynb
backend/posts/: admin.py  forms.py  models.py  urls.py  views.py
backend/posts/migrations/: 0001_initial.py  0002_tag.py  0003_auto_20210908_0735.py  0004_post_modified_at.py
backend/posts/tests/: test_forms.py  test_models.py  test_urls.py  (+1 more)
backend/templates/: about.html  base.html  contact.html  index.html  meta.html  post.html
backend/users/: views.py
frontend/: package.json
frontend/scripts/: clean.js  render-assets.js  render-pug.js  render-scripts.js  render-scss.js
(+71 files in other folders)
